[package]
name = "dmak26"
version = "0.1.0"
edition = "2024"
default-run = "client"

# Example of customizing binaries in Cargo.toml.

[[bin]]
name = "server"
required-features = ["server"]

[[bin]]
name = "client"
required-features = ["client"]

[features]
default = []
client = []
server = []

[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking", "debug"] }
lightyear = { version = "0.26.4", features = ["interpolation", "prediction", "replication", "input_native", "netcode", "udp"] }
serde = "1.0.228"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
