[package]
name = "dmak26"
version = "0.1.0"
edition = "2024"
default-run = "client"

# Example of customizing binaries in Cargo.toml.

[[bin]]
name = "server"
required-features = ["server"]

[[bin]]
name = "client"
required-features = ["client"]

[features]
default = []
client = []
server = []

[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking", "debug"] }
bevy-persistent = { version = "0.10.0", features = ["pretty", "ron"] }
dirs = "6.0.0"
lightyear = { version = "0.26.4", features = ["interpolation", "prediction", "replication", "input_native", "netcode", "udp"] }
serde = "1.0.228"

# Enable getrandom to work on wasm. see also the rustflags line in .cargo/config.toml
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
# https://github.com/rust-random/getrandom?tab=readme-ov-file#opt-in-backends
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.2.17", features = ["js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
